# radianite_val

./: .gitignore  AGENT.md  README.md  THIRD_PARTY_NOTICES.md  index.html  locale-registry.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: index.html  script.js  styles.css
scripts/: validate-locales.mjs
src-rs/: Cargo.toml  tauri.conf.json
src-rs/locales/: ar-AE.json  cs-CZ.json  da-DK.json  de-DE.json  en-US.json  es-MX.json  fi-FI.json  fil-PH.json  fr-FR.json  hi-IN.json  id-ID.json  ja-JP.json  ko-KR.json  ms-MY.json  nl-NL.json  pl-PL.json  pt-BR.json  ru-RU.json  sv-SE.json  th-TH.json  tr-TR.json  vi-VN.json  zh-CN.json  zh-TW.json
src-rs/src/: app_state.rs  commands.rs  discord_rpc.rs  lib.rs  overlay.rs  settings.rs
src-rs/src/riot/: cache.rs  local_client.rs  lockfile.rs  mod.rs  request_budget.rs  state.rs  valorant_client.rs  watcher.rs
src-ui/: App.css  App.tsx  main.tsx
src-ui/components/: discord-card.tsx  live-match-hero.tsx  quick-info-card.tsx  relative-time.tsx  release-notes-dialog.tsx  settings-dialog.tsx  startup-veil.tsx  status-bar.tsx  title-bar.tsx  updates-card.tsx
src-ui/lib/: format.ts  rpc-preview.ts  types.ts  use-radianite.ts
src-ui/locales/ui/: en-US.json
