[package]
name = "radianite"
version = "0.1.0"
description = "Your tactical Valorant companion for every match."
authors = ["Shashank Baghel <shnk@radcolor.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "radianite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
discord-rich-presence = "1.1"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tokio = { version = "1", features = ["io-util", "macros", "net", "sync", "time"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
